--- a/website/CalDayVis.html
+++ b/website/CalDayVis.html
@@ -16,7 +16,7 @@
 <script>
 
 // set the dimensions and margins of the graph
-var margin = {top: 20, right: 20, bottom: 30, left: 50},
+var margin = {top: 20, right: 20, bottom: 50, left: 70},
     width = 960 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
@@ -74,11 +74,32 @@ d3.csv("data.txt", function(error, data) {
   svg.append("g")
       .attr("transform", "translate(0," + height + ")")
       .call(d3.axisBottom(x));
+  // text label for the x axis
+  svg.append("text")             
+      .attr("transform",
+            "translate(" + (width/2) + " ," + 
+                           (height + margin.top + 20) + ")")
+      .style("text-anchor", "middle")
+      .text("Date");
 
   // Add the Y Axis
   svg.append("g")
       .call(d3.axisLeft(y));
+  // text label for the y axis
+  svg.append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 0 - margin.left)
+      .attr("x",0 - (height / 2))
+      .attr("dy", "1em")
+      .style("text-anchor", "middle")
+      .text("Temp (C)");   
 
+  // text label for the title
+  svg.append("text")
+      .attr("x", width / 2)
+      .attr("y", 0)
+      .style("text-anchor", "middle")
+      .text("Weatherstation Temp data");   
 });
 
 </script>
